Update CATALINA_OPTS settings